fixed grid for better user experience on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
   cursor: pointer;
 }
 
+.img-thumbnail {
+  width: 100%;
+}
+
 .row {
   margin-top: 1rem;
 }
